--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:id="@+id/toolbarMain"
-        android:background="@color/colorPrimary"
+        android:background="@color/ctColor"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
