--- a/app/src/main/res/layout/activity_pub_nub_login.xml
+++ b/app/src/main/res/layout/activity_pub_nub_login.xml
@@ -14,28 +14,34 @@
         style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="44dp"
         android:background="@color/ctColor"
         android:text="login"
         android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
         android:textColor="@color/md_white_1000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameWrapper" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameWrapper"
+        app:layout_constraintVertical_bias="0.824" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="273dp"
-        android:layout_height="176dp"
+        android:layout_width="308dp"
+        android:layout_height="229dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/pubKeyWrapper"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ctlogo" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/smartdeskedit" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/pubKeyWrapper"
@@ -43,18 +49,18 @@
         android:layout_height="60dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="268dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.cielyang.android.clearableedittext.ClearableEditText
             android:id="@+id/pubField"
-            android:importantForAutofill="noExcludeDescendants"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:hint="Enter publish key" />
+            android:hint="Enter publish key"
+            android:importantForAutofill="noExcludeDescendants" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
