--- a/app/src/main/res/drawable/splashbackground.xml
+++ b/app/src/main/res/drawable/splashbackground.xml
@@ -5,7 +5,7 @@
     <item android:drawable="@color/ctColor" />
 
     <item>
-        <bitmap android:src="@drawable/smartdeskwhite"
+        <bitmap android:src="@drawable/ctlogowh"
             android:gravity="center" />
     </item>
 
