--- a/app/src/main/res/layout/activity_edit_login.xml
+++ b/app/src/main/res/layout/activity_edit_login.xml
@@ -36,10 +36,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="144dp"
         android:text="Pub Key"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -106,10 +106,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Edit Login"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.656" />
 
 </android.support.constraint.ConstraintLayout>
